<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stefan.scamper.IdeaOverviewActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/ideaOverviewList"
        android:headerDividersEnabled="false"
        android:footerDividersEnabled="false"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textViewIdeaName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tf_ideaName"
        android:id="@+id/textViewIdeaName"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_again"
        android:id="@+id/btn_start_again"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:id="@+id/btn_delete"
        android:layout_alignParentBottom="true" />


    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/help_overlay"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black_transparent"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tf_help"
            android:id="@+id/helpText"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:focusableInTouchMode="false"
            android:textColor="#999999" />
    </RelativeLayout>
</RelativeLayout>
