<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent" android:layout_height="match_parent"
>

<LinearLayout
    android:id="@+id/mainLinearLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:weightSum="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tf_settings"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tf_numberQuestions"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewProgress"
        android:layout_gravity="center_horizontal" />

    <SeekBar
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/questionsSeekBar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tf_startscreen"
        android:id="@+id/textView5"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal">
        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zufallsfrage"
            android:id="@+id/radio1"
            android:layout_gravity="center_horizontal" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:id="@+id/radio3"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:id="@+id/btn_save"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
    <RelativeLayout
        android:id="@+id/help_overlay"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black_transparent"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tf_help"
            android:id="@+id/helpText"
            android:layout_gravity="center_horizontal"
            android:focusableInTouchMode="false"
            android:textColor="#999999" />
    </RelativeLayout>
</RelativeLayout>